# metrics-utility

./: .gitignore  Makefile  README.md  ROADMAP.md  pyproject.toml  requirements-dev.txt  setup.cfg  utility.py  utility_test.py
.github/workflows/: coverage.yml  format.yml  lint.yml  release.yml  test.yml
make/: build.mk  common.mk  env.mk  lint.mk  release.mk  test.mk
src/metrics_utility/: __init__.py  core.py
src/metrics_utility_pkg_jewzaam.egg-info/: PKG-INFO  SOURCES.txt
tests/: __init__.py
tests/integration/: __init__.py  test_example_integration.py
tests/unit/: __init__.py  test_core.py
