[metadata]
name = metrics-utility-pkg-jewzaam
version = 0.0.1
author = Naveen Malik
author_email = jewzaam@gmail.com
description = Utility for metrics exporters.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jewzaam/metrics-utility

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src